2005-02-14  Andy Wingo  <wingo@pobox.com>

	* data/glade/admin.glade: Remove "Stop all" toolbar button. It
	doesn't work right now.

	* flumotion/common/bundle.py (BundlerBasket.getDependencies):
	Rework to check if the argument is a valid bundle, and raise an
	exception otherwise.

	* flumotion/worker/checks/video.py (check1394): Go to PLAYING, not
	READY. Bug introduced on 02-08.
	(check1394.iterate): Whoops, actually return if the bin failed to
	iterate.

	* flumotion/test/test_parts.py (TestComponentsView.testSelected):
	Connect to the right signal.

	* flumotion/admin/gtk/parts.py (ComponentsView::has-selection):
	Renamed from ::selected to indicate that we are fired when the
	selection is None. Emitters adapted.

	* flumotion/admin/gtk/client.py (Window._create_ui): Connect to
	has-selection rather than selected on the components view, and
	call _set_component_ops_sensitive() to set initial sensitivity
	state.
	(Window._set_component_ops_sensitive): New method, sets the
	sensitivity of the start/stop toolbar and menu items.
	(Window._components_view_has_selection_cb): Adapt to has-selection
	signal, and call _set_component_ops_sensitive(). Renamed from
	...selected_cb.

	* flumotion/admin/gtk/Makefile.am (component_PYTHON): Add
	connections.py to the list. Thanks to Christian Frederick Kalager
	Schaller for the tip.

2005-02-09  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/gtk/client.py (Window.componentCallRemote): Fix
	a bug in the arglist to ...Status.
	(Window.componentCallRemoteStatus): Renamed the callbacks and
	errbacks.

	* flumotion/admin/gtk/connections.py
	(ConnectionsDialog.on_cancel): Hooked up!
	(ConnectionsDialog.on_has_selection): Use self.widgets[], not
	attrs to get the widget. Word.

	* flumotion/admin/gtk/client.py (Window._component_do): Finish
	duplicating componentCallRemoteStatus. Gee, code duplication is
	great. Wonder why I'm writing these changelogs.

	* flumotion/wizard/save.py (WizardSaver.getVideoOverlay): Add CC